# vTriton

./: .claudeignore  .gitignore  .gitmodules  AGENTS.md  AscendModelInterfaces.h  AscendModelOps.cpp  BUILD.md  CLAUDE.md  CMakeLists.txt  ConvertTritonToAscend.cpp  DEPENDENCIES.md  EstimateCycles.cpp  MemoryTilingOptimizer.h  PassRegistration.cpp  PipelineAnalysis.h  PipelineAnalysisPass.cpp  README.md  RooflineAnalysis.cpp  TilingOptimizationPass.cpp  Transforms-CMakeLists.txt  UnifiedTilingCostModel.h  ascend-perf-model-opt.cpp  ascend_ops.mlir  lib_Transforms_CMakeLists.txt  llvm-dependency-analysis.md  optimization_exploration.md  root_CMakeLists.txt  test_CMakeLists.txt  tools-CMakeLists.txt  tritonsim-opt-CMakeLists.txt  tritonsim-opt.cpp  tritonsim-opt_CMakeLists.txt
.omc/: prd.json
.omc/plans/: gap_ovl_wiring_handoff.md  peak_hbm_contention_calibration.md  progress.txt  stage_b_handoff.md
.omc/research/hw_runs/: RESULTS.md  counterfactual_gap_results.json  counterfactual_results.json  multi_kernel_results.json
.omc/specs/: author_headroom_gap_analysis.md  implementation_and_paper_plan.md  performance_bound_model.md
configs/: README.md  ascend_910b.json  ascend_910b3.json  ascend_910b3_v3.json  ascend_910b_v3.json
docs/: ARCHITECTURE.md  CALIBRATION_GUIDE.md  DEPLOYMENT_GUIDE.md
docs/hivm_bound_rewrite/: README.md  feature_bound_guided_hivm_rewriter.md  hivm_bound_vs_diagnosis_status.md  hivm_optimization_playbook.md
docs/perfbound/profile_utilization/: input_sources.md  overview.md  run_profile_utilization.md
docs/tuning/: AscendNPU-IR-编译策略寻优建模与算法设计.md
include/AscendModel/: CMakeLists.txt  HardewareConfig.h
include/AscendModel/Analysis/: HIVMAnalysis.h  HIVMBottleneckDiagnosis.h  HIVMPipeEnum.h  HardwareConfig.h  PipelineAnalysis.h  UnifiedTilingCostModel.h  Utils.h
include/AscendModel/IR/: AscendModelDialect.h  AscendModelInterfaces.td  AscendModelOps.td
include/AscendModel/Transforms/: HivmCompiler.h  HivmOpsEditor.h  Passes.td
lib/: CMakeLists.txt
lib/AscendModel/Analysis/: CMakeLists.txt  HIVMAnalysis.cpp  HIVMBottleneckDiagnosis.cpp  HardwareConfig.cpp  MemoryTilingOptimizer.cpp  PipelineAnalysis.cpp  UnifiedTilingCostModel.cpp
lib/AscendModel/IR/: AscendModelOps.cpp  CMakeLists.txt
lib/AscendModel/Transforms/: CMakeLists.txt  ConvertTritonToAscend.cpp  EstimateCycles.cpp  HIVMAnalysisPass.cpp  HivmCompiler.cpp  HivmOpsEditor.cpp  InsertDataTransfers.cpp  PassRegistration.cpp  PerfReportPass.cpp  PipelineAnalysisPass.cpp  TilingOptimizationPass.cpp
output/: hivm_add_kernel_diagnosis.txt  hivm_mixed_cv_kernel_diagnosis.txt
patches/: ascendnpu-ir-llvm20-compat.patch  triton-ascend-compile-only-mock.patch
perfbound/analyze/: __init__.py  hivm_bottleneck_diagnosis.py  profile_utilization.py
perfbound/calibration/: calib_loader.py  calib_reporter.py  constants.py  des_trace_postprocessor.py  model_trace_extractor.py  msprof_trace_extractor.py  per_core_calibrator.py  pipeline_calibrator.py  trace_calibrator.py
perfbound/calibration/bench_output/: mte_hbm_allcore.csv  mte_l0c_to_gm.csv  scalar_peak.csv
perfbound/calibration/data/: bandwidth_910b3.csv  calib_910b3_hardware.json  calib_910b3_v1.json  calib_910b3_v2.json  calib_910b3_v3_opcode.json
perfbound/calibration/microbench/: README.md  bench_launcher.cpp  mte_hbm_allcore.cce  mte_l0c_to_gm.cce  scalar_peak.cce  vt_microbench_common.h
perfbound/calibration/scripts/: cce_remote_bench.py  fit_constants.py
perfbound/combine/: bound_combiner.py  report.py  run_report.py  two_limit.py
perfbound/distribution/: core_mapper.py
perfbound/extract/: dsl_extractor.py  hivm_extractor.py  op_classifier.py
perfbound/model/: bounds.py  component_model.py
perfbound/validate/: hivm_edits.py  msprof_parser.py
scripts/: apply_patches.sh  build_llvm.sh  clean_npuir.py  component_attribution_prototype.py  hivm_des_sim.py  kernel_launcher.py  measure_hbm_bw.py  optimize_kernel_001.py  overlap_walker_prototype.py  remote_bench.py  validate_shared_llvm.sh
scripts/e2e_chunk/: README.md  run_all.sh  run_calibration.sh  run_des_trace.sh  run_dump_mlir.sh  run_profile.sh
scripts/e2e_chunk/dump/: kernel.npuir.mlir
scripts/e2e_chunk/output/: calib_910b3_v3.json  calib_report_v3_20260625.txt  kernel_clean_20260624.npuir.mlir  op_summary.csv  v3_calib_report.json  v3_final.json
scripts/e2e_split_qkv/: README.md  run_calibration.sh  run_des_trace.sh  run_dump_mlir.sh  run_profile.sh
second/: 111.py  222.py  profile_utilization_report001.json
test/: CMakeLists.txt  HivmOpsEditorTest.cpp  amort_sweep_bench.py  ascend_ops.mlir  flash_attention.ttir  flash_attention_ascend.mlir  hivm_add_kernel.npuir.mlir  hivm_mixed_cv_kernel.npuir.mlir  layernorm_ascend.mlir  layernorm_bench.py  rmsnorm_bench.py  seeded_gap1_bench.py  seeded_gap2_bench.py  seeded_serial_bench.py  softmax_ascend.mlir  softmax_bench.py  split_qkv_rmsnorm_mrope.py  stream_copy_bench.py  transfer_spaces_ascend.mlir  triton_hivm_launch_smoke.py  triton_smoke.py
test/benchmarks/: bench_vector_ops.py  bench_vector_ops_batch2.py  run_benchmarks.sh
test/benchmarks/output/: bench_results.json
tests/hivm/: test_component_validation.py  test_sync_verification.py
tests/perfbound/: test_bounds.py  test_calibration_extraction.py  test_calibration_load.py  test_calibration_wiring.py  test_chunk_kda_hw_validation.py  test_component_model.py  test_counterfactual.py  test_gap2_absolute_validation.py  test_hivm_cli_integration.py  test_kernel_launcher.py  test_microbench_sources.py  test_msprof_parser.py  test_profile_utilization.py  test_remote_bench.py  test_report.py  test_report_measured.py  test_seeded_serial_two_limit_hardware.py  test_stage_a_pipeline.py  test_stage_b_stories.py  test_two_limit.py
tools/: CMakeLists.txt
tools/ascend-tiling-opt/: ascend-tiling-opt.cpp
tools/common/: triton_dsl_dump_launcher.py
tools/hivm-crud/: hivm-crud.cpp
tools/hivm-optimize/: hivm-optimize.cpp
tools/tritonsim-hivm/: triton_hivm_launcher.py  tritonsim-hivm.cpp
tools/tritonsim-opt/: tritonsim-opt.cpp
(+43 files in other folders)
